real system controller
